<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--   Email Label -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/changepassword_edt_oldpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingLeft="@dimen/_3sdp"
                android:paddingTop="@dimen/_5sdp"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/changepassword_edt_newpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingLeft="@dimen/_3sdp"
                android:paddingTop="@dimen/_5sdp"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>


        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/changepassword_edt_confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingLeft="@dimen/_3sdp"
                android:paddingTop="@dimen/_5sdp"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>
        <!--  Password Label -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical">

            <Button
                android:id="@+id/login_btn_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@color/app_color"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12sdp" />

            <Button
                android:id="@+id/login_btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:background="@color/app_color"
                android:text="@string/cancel_text"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>